Fix word breaks in cards and dataset lists

--- a/shared/scss/components/ckan/dataset-list.scss
+++ b/shared/scss/components/ckan/dataset-list.scss
@@ -9,8 +9,9 @@
       border: none;
     }
 
-    > a {
+    a {
       color: $text-color;
+      word-break: break-word;
     }
   }
 
